<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/card_padding">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:contentDescription="@string/avatar_desc"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_user_placeholder" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_name"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgAvatar"
            app:layout_constraintTop_toTopOf="@id/imgAvatar"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_email" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sample_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
