<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_round_bg">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_confirmation"
        android:textAppearance="?attr/textAppearanceBody1"
        android:paddingBottom="@dimen/spacing_medium" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCancel"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_radius"
            android:layout_marginEnd="@dimen/spacing_small">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_small"
                android:text="@string/cancel"
                android:textAppearance="?attr/textAppearanceButton" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAccept"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_radius">

            <TextView
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_small"
                android:text="@string/accept"
                android:textAppearance="?attr/textAppearanceButton" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>
