<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/details"
        app:titleCentered="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="@dimen/spacing_large"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/spacing_large">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_placeholder_avatar"
                android:background="@drawable/circle_mask"
                android:clipToOutline="true"
                android:layout_marginBottom="@dimen/spacing_large" />

            <ProgressBar
                android:id="@+id/progress"
                style="?attr/progressBarStyle"
                android:layout_width="@dimen/progress_size"
                android:layout_height="@dimen/progress_size"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/spacing_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilId"
                style="@style/Widget.MyApp.TextInput.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MyApp.TextInput.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:hint="@string/label_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                style="@style/Widget.MyApp.TextInput.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:hint="@string/label_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                style="@style/Widget.MyApp.TextInput.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:hint="@string/label_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
