<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.users.UsersActivity">

<LinearLayout
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="@dimen/spacing_medium">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize" />

<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/spacing_small"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="@dimen/card_elevation"
    android:padding="@dimen/spacing_small">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        style="@style/Widget.AppCompat.SearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="true"
        android:queryHint="@string/search_hint"
        app:closeIcon="@drawable/ic_close"
        app:searchIcon="@drawable/ic_search" />
</com.google.android.material.card.MaterialCardView>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/spacing_medium" />

    <ProgressBar
        android:id="@+id/progress"
        style="?attr/progressBarStyle"
        android:layout_width="@dimen/progress_size"
        android:layout_height="@dimen/progress_size"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="@dimen/history_medium_height"
    android:overScrollMode="always"
    android:scrollbars="vertical"
    android:fadeScrollbars="false"
    android:padding="@dimen/spacing_small"
    android:layout_marginBottom="@dimen/spacing_medium">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/historyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="@dimen/spacing_small"
        app:chipSpacingVertical="@dimen/spacing_small"
        app:singleLine="false"/>
</ScrollView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="@dimen/spacing_small">

    <ImageButton
        android:id="@+id/btnPrev"
        android:layout_width="@dimen/button_icon_size"
        android:layout_height="@dimen/button_icon_size"
        android:src="@drawable/ic_arrow_left"
        android:contentDescription="@string/prev_page"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <TextView
        android:id="@+id/tvPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_small"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/page_indicator" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="@dimen/button_icon_size"
        android:layout_height="@dimen/button_icon_size"
        android:src="@drawable/ic_arrow_right"
        android:contentDescription="@string/next_page"
        android:background="?attr/selectableItemBackgroundBorderless" />
</LinearLayout>
</LinearLayout>

<com.google.android.material.navigation.NavigationView
android:id="@+id/navView"
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:layout_gravity="start"
app:headerLayout="@layout/nav_header"
app:menu="@menu/drawer_menu" />
    </androidx.drawerlayout.widget.DrawerLayout>
